fixed css issue where list would be cut off

--- a/style.css
+++ b/style.css
@@ -217,7 +217,6 @@ h1 {
 .layer-body {
   padding: 14px;
   overflow: hidden;
-  max-height: 2000px;
   transition: max-height 0.35s ease, padding 0.35s ease;
 }
 
